---------------------------------------------------------------------------
Version 5.6.5  [V5-STABLE] (rgerhards), 2011-03-??
- bugfix: omlibdbi did not use password from rsyslog.con
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=203
- bugfix(kind of): tell users that config graph can currently not be
  generated
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=232
- bugfix: discard action did not work under some circumstances
  fixes: http://bugzilla.adiscon.com/show_bug.cgi?id=217
  (backport from 5.7.8)
---------------------------------------------------------------------------
Version 5.6.4  [V5-STABLE] (rgerhards), 2011-03-03
- bugfix: potential abort condition when $RepeatedMsgReduction set to on
  as well as potentially in a number of other places where MsgDup() was
  used. This only happened when the imudp input module was used and it
  depended on name resolution not yet had taken place. In other words,
  this was a strange problem that could lead to hard to diagnose 
  instability. So if you experience instability, chances are good that
  this fix will help.
- bugfix: fixed a memory leak and potential abort condition
  this could happen if multiple rulesets were used and some output batches
  contained messages belonging to more than one ruleset.
  fixes: http://bugzilla.adiscon.com/show_bug.cgi?id=226
  fixes: http://bugzilla.adiscon.com/show_bug.cgi?id=218
- bugfix: memory leak when $RepeatedMsgReduction on was used
  bug tracker: http://bugzilla.adiscon.com/show_bug.cgi?id=225
---------------------------------------------------------------------------
Version 5.6.3  [V5-STABLE] (rgerhards), 2011-01-26
- bugfix: action processor released mememory too early, resulting in
  potential issue in retry cases (but very unlikely due to another
  bug, which I also fixed -- only after the fix this problem here
  became actually visible).
- bugfix: batch processing flagged invalid message as "bad" under some
  circumstances